# dioxus-tw-components

./: .gitignore  Cargo.toml  README.md  build.rs  dioxus-tw-components-style.css
.github/workflows/: mail.yml  publish.yml
css/: input.css  tailwind.config.js
docsite/css/: input.css
docsite/src/app/: home.rs  layout.rs
docsite/src/app/components/: layout.rs
examples/: input.css  main.rs  tailwind.config.js
examples/assets/: tailwind.css
old-src/components/atoms/icon/: props.rs
old-src/components/atoms/placeholder/: style.rs
old-src/components/molecules/: mod.rs
old-src/components/templates/: docs.rs  maintemplate.rs
old-src/theme/: component.rs
src/: bootstrap.rs  lib.rs  prelude.rs
src/bootstrap/: mod.rs
src/components/: accordion.rs  breadcrumb.rs  button.rs  callout.rs  carousel.rs  checkbox.rs  dropdown.rs  formlist.rs  hovercard.rs  icon.rs  input.rs  markdown.rs  mod.rs  modal.rs  navbar.rs  pagination.rs  placeholder.rs  progressbar.rs  radio.rs  select.rs  sidepanel.rs  slider.rs  sorttable.rs  stepper.rs  table.rs  tabs.rs  textarea.rs  toast.rs  toggle.rs
src/components/molecules/: mod.rs
src/components/templates/: docs.rs  header.rs  maintemplate.rs
src/theme/: component.rs  mod.rs
style/components/: breadcrumb.css  button.css  carousel.css  checkbox.css  dropdown.css  hovercard.css  input.css  lightswitch.css  modal.css  navbar.css  placeholder.css  progressbar.css  radio.css  scrollable.css  select.css  sidepanel.css  slider.css  sorttable.css  stepper.css  table.css  tabs.css  textarea.css  theme.css  toast.css  toggle.css
(+73 files in other folders)
