[package]
name = "dioxus-tw-components"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Components made for Dioxus using TailwindCSS 4."
readme = "README.md"
homepage = "https://42angouleme.github.io/dioxus-tw-components-docsite/"
repository = "https://github.com/42Angouleme/dioxus-components"
keywords = ["web", "desktop", "gui", "dioxus", "components"]
authors = ["Louis Truchelut", "kbz_8", "Ziale", "gpoblon", "42Angouleme"]

[lib]
name = "dioxus_tw_components"
path = "src/lib.rs"

[[example]]
name = "main"

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = [] }
strum = { version = "0.27.1", default-features = false, features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[build-dependencies]
minify-html = "0.16.4"
